# Numerical_Methods_II

./: CMakeLists.txt  README.md  main.cpp
docs/: about.html  devs.html  index.html
docs/css/: style copy.css  style.css
include/: diff.h  diffLimits.h  diffTaylor.h  function.h
include/eigenValues/: householder.h  jacobi.h  matrizUtils.h  menuAutovalores.h  metodoQR.h  potencia.h
include/eigenvalues/: householder.h  jacobiMethod.h  matrixUtils.h  menuEigenvalues.h  powerMethod.h  qrMethod.h
include/numericalDiff/: finiteDiff.h  finiteDiffNewton.h  finiteDiffTaylor.h  menuDerivacao.h  menuNumericalDiff.h
include/numericalInt/: gaussLegendre.h  gaussSpecial.h  menuIntegracao.h  menuNumericalInt.h  multiDimIntegral.h  newtonCotes.h  singularIntegral.h
include/pvc/: diferencasFinitas.h  elementosFinitos.h  finiteDiff.h  finiteElements.h  menuPVC.h  pvcUtils.h
include/pvi/: eulerExplicito.h  eulerImplicito.h  explicitEuler.h  implicitEuler.h  menuPVI.h  predictorCorrector.h  preditorCorretor.h  pviUtils.h  rungeKutta.h
src/: diff.cpp  diffLimits.cpp  diffTaylor.cpp  finiteDiff.cpp  finiteDiffTaylor.cpp  function.cpp
src/eigenValues/: householder.cpp  jacobi.cpp  matrizUtils.cpp  menuAutovalores.cpp  metodoQR.cpp  potencia.cpp
src/eigenvalues/: householder.cpp  jacobiMethod.cpp  matrixUtils.cpp  menuEigenvalues.cpp  powerMethod.cpp  qrMethod.cpp
src/numericalDiff/: finiteDiff.cpp  finiteDiffNewton.cpp  finiteDiffTaylor.cpp  menuDerivacao.cpp  menuNumericalDiff.cpp
src/numericalInt/: gaussLegendre.cpp  gaussSpecial.cpp  menuIntegracao.cpp  menuNumericalInt.cpp  multiDimIntegral.cpp  newtonCotes.cpp  singularIntegral.cpp
src/pvc/: diferencasFinitas.cpp  elementosFinitos.cpp  finiteDiff.cpp  finiteElements.cpp  menuPVC.cpp  pvcUtils.cpp
src/pvi/: eulerExplicito.cpp  eulerImplicito.cpp  explicitEuler.cpp  implicitEuler.cpp  menuPVI.cpp  predictorCorrector.cpp  preditorCorretor.cpp  pviUtils.cpp  rungeKutta.cpp
web/css/: style.css
web/html/: about.html  devs.html  index.html
web/js/: accordion.js
